# Creator-Studio

./: .gitignore  README.md  create-arch-doc.js  editor-harness.html  gen.js  package-lock.json  package.json  playwright.config.ts  test-ai-integration.cjs  test-e2e-flow.cjs  vite.config.ts
.github/workflows/: ci.yml  release.yml
.lingma/agents/: chief-engineer.md  project-manager.md  requirements-analyzer.md  software-architect.md  software-engineer-dev.md  software-engineer-feature.md  state-reviewer.md  test-engineer.md
.lingma/skills/: state-management-reviewer.md
bug/: MLComputePlan_link_error_solution.md  build_packaging_notes.md  default_provider_dashscope_qwen_demo.md  editor_autosave_content_loss.md  editor_interaction_regression_tests.md  editor_shortcuts_improvement.md  package_building_notes.md  windows_demo_server_connection_note.md
docs/: AI配置简化方案.md  Creator开发计划.md  RELEASE-LOG-v0.1.19.md  T2.6-验证报告.md  ai-engine-refactor-rfc.md  墨灵开发计划.md  当前会话接力记录.md  待解决问题清单.md  架构说明.md  桌宠化AI写作助手创意方案.md
docs/bug-fix-lessons/: save-status-bug-analysis.md
scripts/: build-ai-engine.mjs  copy-release-artifacts.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: ai_bridge.rs  ai_daemon.rs  ai_proxy.rs  chapter.rs  config.rs  keyring_store.rs  lib.rs  rag.rs
src/app/: AppProviders.tsx  bootstrap.ts  index.ts  store.ts  types.ts
tasks/: phase4-worldbuilding-plan.md  t1769959195.md  t1769963974.md  t1769964835.md  t1769968900.md
test-suite/: README.md  package.json  run.mjs
(+80 files in other folders)
