[package]
name = "creatorai-v2"
version = "0.1.19"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "creatorai-v2"
edition = "2021"
rust-version = "1.77"

[lib]
name = "creatorai_v2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-opener = { version = "2.0.0-rc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2.0.0-rc"
rfd = "0.14.1"
dirs = "5.0.1"
fastembed = "5.12.1"
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic", "cuda", "copy-dylibs"] }
tokenizers = "=0.15.2"
anyhow = "1.0.86"
tauri-plugin-dialog = "2.0.0-rc"
regex = "1.10.4"
keyring = "2.3.3"
bincode = "1.3.3"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
sha2 = "0.10.9"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
core-foundation = "0.9"

[package.metadata.bundle]
category = "public.app-category.developer-tools"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

# 添加 macOS 链接配置
[target.'cfg(target_os = "macos")'.build-dependencies]
